<resources>
    <string name="app_name">Myself</string>
    <string name="yoo">Yoo!!</string>
    <string name="intro">Selamat datang \n diAplikasi milik saya</string>
    <string name="skip">Skip</string>
    <string name="description_text">Description Text</string>
    <string name="title_text">Title Text</string>
    <string name="next">Next</string>
    <string name="tampan_dan_berani">Tampan Dan Berani</string>
    <string name="home">Home</string>
    <string name="txtdaily">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="nofrizal">Nofrizal</string>
    <string name="deskripsi_diri">Nama saya Nofrizal, saya lahir di Bandung 26 November 1999. Orang tua saya berasal dari padang, orang tua saya merantau sejak mereka remaja. Saya memiliki adik bernama Silvia. Hobby saya adalah bermain game, serta beberapa olahraga seperti basket dan badminton, saya pernah bercita cita menjadi seorang atlit, tetapi ada banyal yang merubah pikiran saya untuk menjadi seorang atlit hingga saat SMA saya memutuskan untuk bercita cita untuk membuat game/ developer game.</string>
    <string name="title">Title</string>
    <string name="singer">Singer</string>
    <string name="find_me">Find Me</string>
    <string name="about_the_app">About The App</string>
    <string name="ludens">Bring Me The Horizon - Ludens: Live in Tokyo</string>
    <string name="MHA">My Hero Academia: HEROES RISING</string>
    <string name="spiderman">SPIDER-MAN 3: Home Run</string>
    <string name="friend_list">Friend List</string>
    <string name="daily_activity">Daily Activity</string>
</resources>
