<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"/>

    <item
        android:id="@+id/ic_dailyActivity"
        android:icon="@drawable/ic_library_book"
        android:enabled="true"
        android:title="@string/daily_activity"/>

    <item
        android:id="@+id/ic_gallery"
        android:icon="@drawable/ic_image"
        android:enabled="true"
        android:title="@string/gallery"/>

    <item
        android:id="@+id/ic_music"
        android:icon="@drawable/ic_library_music"
        android:enabled="true"
        android:title="@string/music"/>

    <item
        android:id="@+id/ic_profile"
        android:icon="@drawable/ic_accessibility"
        android:enabled="true"
        android:title="@string/profile"/>

</menu>