<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen64"
    android:background="@color/white">

    <ImageView
        android:id="@+id/SlideIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_text"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen8"
        android:layout_marginEnd="@dimen/dimen8"
        android:gravity="center"
        android:text="@string/description_text"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:fontFamily="@font/open_sans"/>

</LinearLayout>